- 05-29-04: Switched GM Command, #changeskill to ALBGM system. [AlexKreuz]
- 05-29-04: Switched GM Command, #zeny to ALBGM system. [AlexKreuz]
- 05-29-04: Switched GM Command, #statall to ALBGM system. [AlexKreuz]
- 05-29-04: Switched GM Command, #skillall to ALBGM system. [AlexKreuz]
- 05-29-04: Switched GM Command, #skillpoint to ALBGM system. [AlexKreuz]
- 05-29-04: Switched GM Command, #changestat to ALBGM system. [AlexKreuz]
- 05-29-04: Switched GM Command, #jlevel to ALBGM system. [AlexKreuz]
- 05-29-04: Switched GM Command, #blevel to ALBGM system. [AlexKreuz]
- 05-29-04: Fixed GM_RETURN/GM_SAVE mismatched data. [AlexKreuz]
- 05-29-04: Fixed missing 'logs' directory caused crash. [AlexKreuz]
- 05-29-04: Switched GM Command, #job to ALBGM system. [AlexKreuz]
- 05-29-04: Switched GM Command, #banish to ALBGM system. [AlexKreuz]
- 05-29-04: Switched GM Command, #warp to ALBGM system. [AlexKreuz]
- 05-29-04: Switched GM Command, #summon to ALBGM system. [AlexKreuz]
- 05-29-04: Switched GM Command, #goto to ALBGM system. [AlexKreuz]
- 05-28-04: Added #201 - Feature Request: Added timestamps to text console. [AlexKreuz]
- 05-28-04: Added #883 - Feature Request: Option_GM_Logs - INI option logs GM commands. [AlexKreuz]
- 05-28-04: Switched GM Command, #kill to ALBGM system. [AlexKreuz]
- 05-28-04: Switched GM Command, #hstyle to ALBGM system. [AlexKreuz]
- 05-28-04: Switched GM Command, #ccolor to ALBGM system. [AlexKreuz]
- 05-28-04: Switched GM Command, #hcolor to ALBGM system. [AlexKreuz]
- 05-28-04: Added ALBGM command usage succes/error message. [AlexKreuz]
- 05-28-04: Switched GM Command, #auto to ALBGM system. [AlexKreuz]
- 05-28-04: Switched GM Command, #die to ALBGM system. [AlexKreuz]
- 05-28-04: Switched GM Command, #return to ALBGM system. [AlexKreuz]
- 05-28-04: Switched GM Command, #save to ALBGM system. [AlexKreuz]
- 05-28-04: Fixed ALBGM ID non-existant caused crash. [AlexKreuz]
- 05-28-04: Switched GM Command, #item to ALBGM system. [AlexKreuz]