@@ -37,7 +37,7 @@ var
     GM_MONSTER : Byte;
     GM_SPEED : Byte;
     GM_WHOIS : Byte;
-    GM_OPTION: Byte;
+    GM_OPTION : Byte;
     GM_RAW : Byte;
     GM_UNIT : Byte;
     GM_STAT : Byte;
@@ -123,29 +123,70 @@ implementation
         sl.Clear;
         ini.ReadSectionValues('Fusion GM Commands', sl);
 
-        if sl.IndexOfName('ALIVE') > -1 then GM_ALIVE := StrToInt(sl.Values['ALIVE']) else GM_ALIVE := 1;
-        if sl.IndexOfName('ITEM') > -1 then GM_ITEM := StrToInt(sl.Values['ITEM']) else GM_ITEM := 1;
-        if sl.IndexOfName('SAVE') > -1 then GM_SAVE := StrToInt(sl.Values['SAVE']) else GM_SAVE := 1;
-        if sl.IndexOfName('RETURN') > -1 then GM_RETURN := StrToInt(sl.Values['RETURN']) else GM_RETURN := 1;
-        if sl.IndexOfName('DIE') > -1 then GM_DIE := StrToInt(sl.Values['DIE']) else GM_DIE := 1;
-        if sl.IndexOfName('AUTO') > -1 then GM_AUTO := StrToInt(sl.Values['AUTO']) else GM_AUTO := 1;
-        if sl.IndexOfName('HCOLOR') > -1 then GM_HCOLOR := StrToInt(sl.Values['HCOLOR']) else GM_HCOLOR := 1;
-        if sl.IndexOfName('CCOLOR') > -1 then GM_CCOLOR := StrToInt(sl.Values['CCOLOR']) else GM_CCOLOR := 1;
-        if sl.IndexOfName('HSTYLE') > -1 then GM_HSTYLE := StrToInt(sl.Values['HSTYLE']) else GM_HSTYLE := 1;
-        if sl.IndexOfName('KILL') > -1 then GM_KILL := StrToInt(sl.Values['KILL']) else GM_KILL := 1;
-        if sl.IndexOfName('GOTO') > -1 then GM_GOTO := StrToInt(sl.Values['GOTO']) else GM_GOTO := 1;
-        if sl.IndexOfName('SUMMON') > -1 then GM_SUMMON := StrToInt(sl.Values['SUMMON']) else GM_SUMMON := 1;
-        if sl.IndexOfName('WARP') > -1 then GM_WARP := StrToInt(sl.Values['WARP']) else GM_WARP := 1;
-        if sl.IndexOfName('BANISH') > -1 then GM_BANISH := StrToInt(sl.Values['BANISH']) else GM_BANISH := 1;
-        if sl.IndexOfName('JOB') > -1 then GM_JOB := StrToInt(sl.Values['JOB']) else GM_JOB := 1;
-        if sl.IndexOfName('BLEVEL') > -1 then GM_BLEVEL := StrToInt(sl.Values['BLEVEL']) else GM_BLEVEL := 1;
-        if sl.IndexOfName('JLEVEL') > -1 then GM_JLEVEL := StrToInt(sl.Values['JLEVEL']) else GM_JLEVEL := 1;
-        if sl.IndexOfName('CHANGESTAT') > -1 then GM_CHANGESTAT := StrToInt(sl.Values['CHANGESTAT']) else GM_CHANGESTAT := 1;
-        if sl.IndexOfName('SKILLPOINT') > -1 then GM_SKILLPOINT := StrToInt(sl.Values['SKILLPOINT']) else GM_SKILLPOINT := 1;
-        if sl.IndexOfName('SKILLALL') > -1 then GM_SKILLALL := StrToInt(sl.Values['SKILLALL']) else GM_SKILLALL := 1;
-        if sl.IndexOfName('STATALL') > -1 then GM_STATALL := StrToInt(sl.Values['STATALL']) else GM_STATALL := 1;
-        if sl.IndexOfName('ZENY') > -1 then GM_ZENY := StrToInt(sl.Values['ZENY']) else GM_ZENY := 1;
-        if sl.IndexOfName('CHANGESKILL') > -1 then GM_CHANGESKILL := StrToInt(sl.Values['CHANGESKILL']) else GM_CHANGESKILL := 1;
+        GM_ALIVE := StrToIntDef(sl.Values['ALIVE'], 1);
+        GM_ITEM := StrToIntDef(sl.Values['ITEM'], 1);
+        GM_SAVE := StrToIntDef(sl.Values['SAVE'], 1);
+        GM_RETURN := StrToIntDef(sl.Values['RETURN'], 1);
+        GM_DIE := StrToIntDef(sl.Values['DIE'], 1);
+        GM_AUTO := StrToIntDef(sl.Values['AUTO'], 1);
+        GM_HCOLOR := StrToIntDef(sl.Values['HCOLOR'], 1);
+        GM_CCOLOR := StrToIntDef(sl.Values['CCOLOR'], 1);
+        GM_HSTYLE := StrToIntDef(sl.Values['HSTYLE'], 1);
+        GM_KILL := StrToIntDef(sl.Values['KILL'], 1);
+        GM_GOTO := StrToIntDef(sl.Values['GOTO'], 1);
+        GM_SUMMON := StrToIntDef(sl.Values['SUMMON'], 1);
+        GM_WARP := StrToIntDef(sl.Values['WARP'], 1);
+        GM_BANISH := StrToIntDef(sl.Values['BANISH'], 1);
+        GM_JOB := StrToIntDef(sl.Values['JOB'], 1);
+        GM_BLEVEL := StrToIntDef(sl.Values['BLEVEL'], 1);
+        GM_JLEVEL := StrToIntDef(sl.Values['JLEVEL'], 1);
+        GM_CHANGESTAT := StrToIntDef(sl.Values['CHANGESTAT'], 1);
+        GM_SKILLPOINT := StrToIntDef(sl.Values['SKILLPOINT'], 1);
+        GM_SKILLALL := StrToIntDef(sl.Values['SKILLALL'], 1);
+        GM_STATALL := StrToIntDef(sl.Values['STATALL'], 1);
+        GM_ZENY := StrToIntDef(sl.Values['ZENY'], 1);
+        GM_CHANGESKILL := StrToIntDef(sl.Values['CHANGESKILL'], 1);
+        GM_MONSTER := StrToIntDef(sl.Values['MONSTER'], 1);
+        GM_SPEED := StrToIntDef(sl.Values['SPEED'], 1);
+        GM_WHOIS := StrToIntDef(sl.Values['WHOIS'], 1);
+        GM_OPTION := StrToIntDef(sl.Values['OPTION'], 1);
+        GM_RAW := StrToIntDef(sl.Values['RAW'], 1);
+        GM_UNIT := StrToIntDef(sl.Values['UNIT'], 1);
+        GM_STAT := StrToIntDef(sl.Values['STAT'], 1);
+        GM_REFINE := StrToIntDef(sl.Values['REFINE'], 1);
+        GM_GLEVEL := StrToIntDef(sl.Values['GLEVEL'], 1);
+        GM_IRONICAL := StrToIntDef(sl.Values['IRONICAL'], 1);
+        GM_MOTHBALL := StrToIntDef(sl.Values['MOTHBALL'], 1);
+        
+        GM_AEGIS_B := StrToIntDef(sl.Values['AEGIS_B'], 1);
+        GM_AEGIS_NB := StrToIntDef(sl.Values['AEGIS_NB'], 1);
+        GM_AEGIS_BB := StrToIntDef(sl.Values['AEGIS_BB'], 1);
+        GM_AEGIS_HIDE := StrToIntDef(sl.Values['AEGIS_HIDE'], 1);
+        GM_AEGIS_RESETSTATE := StrToIntDef(sl.Values['AEGIS_RESETSTATE'], 1);
+        GM_AEGIS_RESETSKILL := StrToIntDef(sl.Values['AEGIS_RESETSKILL'], 1);
+        
+        GM_ATHENA_HEAL := StrToIntDef(sl.Values['ATHENA_HEAL'], 1);
+        GM_ATHENA_KAMI := StrToIntDef(sl.Values['ATHENA_KAMI'], 1);
+        GM_ATHENA_ALIVE := StrToIntDef(sl.Values['ATHENA_ALIVE'], 1);
+        GM_ATHENA_KILL := StrToIntDef(sl.Values['ATHENA_KILL'], 1);
+        GM_ATHENA_DIE := StrToIntDef(sl.Values['ATHENA_DIE'], 1);
+        GM_ATHENA_JOBCHANGE := StrToIntDef(sl.Values['ATHENA_JOBCHANGE'], 1);
+        GM_ATHENA_HIDE := StrToIntDef(sl.Values['ATHENA_HIDE'], 1);
+        GM_ATHENA_OPTION := StrToIntDef(sl.Values['ATHENA_OPTION'], 1);
+        GM_ATHENA_STORAGE := StrToIntDef(sl.Values['ATHENA_STORAGE'], 1);
+        GM_ATHENA_SPEED := StrToIntDef(sl.Values['ATHENA_SPEED'], 1);
+        GM_ATHENA_WHO3 := StrToIntDef(sl.Values['ATHENA_WHO3'], 1);
+        GM_ATHENA_WHO2 := StrToIntDef(sl.Values['ATHENA_WHO2'], 1);
+        GM_ATHENA_WHO := StrToIntDef(sl.Values['ATHENA_WHO'], 1);
+        GM_ATHENA_JUMP := StrToIntDef(sl.Values['ATHENA_JUMP'], 1);
+        GM_ATHENA_JUMPTO := StrToIntDef(sl.Values['ATHENA_JUMPTO'], 1);
+        GM_ATHENA_WHERE := StrToIntDef(sl.Values['ATHENA_WHERE'], 1);
+        GM_ATHENA_RURA := StrToIntDef(sl.Values['ATHENA_RURA'], 1);
+        GM_ATHENA_WARP := StrToIntDef(sl.Values['ATHENA_WARP'], 1);
+        GM_ATHENA_RURAP := StrToIntDef(sl.Values['ATHENA_RURAP'], 1);
+        GM_ATHENA_SEND := StrToIntDef(sl.Values['ATHENA_SEND'], 1);
+        GM_ATHENA_WARPP := StrToIntDef(sl.Values['ATHENA_WARPP'], 1);
+        GM_ATHENA_CHARWARP := StrToIntDef(sl.Values['ATHENA_CHARWARP'], 1);
 
         sl.Free;
         ini.Free;
@@ -180,6 +221,47 @@ implementation
         ini.WriteString('Fusion GM Commands', 'STATALL', IntToStr(GM_STATALL));
         ini.WriteString('Fusion GM Commands', 'ZENY', IntToStr(GM_ZENY));
         ini.WriteString('Fusion GM Commands', 'CHANGESKILL', IntToStr(GM_CHANGESKILL));
+        ini.WriteString('Fusion GM Commands', 'MONSTER', IntToStr(GM_MONSTER));
+        ini.WriteString('Fusion GM Commands', 'SPEED', IntToStr(GM_SPEED));
+        ini.WriteString('Fusion GM Commands', 'WHOIS', IntToStr(GM_WHOIS));
+        ini.WriteString('Fusion GM Commands', 'OPTION', IntToStr(GM_OPTION));
+        ini.WriteString('Fusion GM Commands', 'RAW', IntToStr(GM_RAW));
+        ini.WriteString('Fusion GM Commands', 'UNIT', IntToStr(GM_UNIT));
+        ini.WriteString('Fusion GM Commands', 'STAT', IntToStr(GM_STAT));
+        ini.WriteString('Fusion GM Commands', 'REFINE', IntToStr(GM_REFINE));
+        ini.WriteString('Fusion GM Commands', 'GLEVEL', IntToStr(GM_GLEVEL));
+        ini.WriteString('Fusion GM Commands', 'IRONICAL', IntToStr(GM_IRONICAL));
+        ini.WriteString('Fusion GM Commands', 'MOTHBALL', IntToStr(GM_MOTHBALL));
+        
+        ini.WriteString('Aegis GM Commands', 'AEGIS_B', IntToStr(GM_AEGIS_B));
+        ini.WriteString('Aegis GM Commands', 'AEGIS_NB', IntToStr(GM_AEGIS_NB));
+        ini.WriteString('Aegis GM Commands', 'AEGIS_BB', IntToStr(GM_AEGIS_BB));
+        ini.WriteString('Aegis GM Commands', 'AEGIS_HIDE', IntToStr(GM_AEGIS_HIDE));
+        ini.WriteString('Aegis GM Commands', 'AEGIS_RESETSTATE', IntToStr(GM_AEGIS_RESETSTATE));
+        ini.WriteString('Aegis GM Commands', 'AEGIS_RESETSKILL', IntToStr(GM_AEGIS_RESETSKILL));
+        
+        ini.WriteString('Athena GM Commands', 'ATHENA_HEAL', IntToStr(GM_ATHENA_HEAL));
+        ini.WriteString('Athena GM Commands', 'ATHENA_KAMI', IntToStr(GM_ATHENA_KAMI));
+        ini.WriteString('Athena GM Commands', 'ATHENA_ALIVE', IntToStr(GM_ATHENA_ALIVE));
+        ini.WriteString('Athena GM Commands', 'ATHENA_KILL', IntToStr(GM_ATHENA_KILL));
+        ini.WriteString('Athena GM Commands', 'ATHENA_DIE', IntToStr(GM_ATHENA_DIE));
+        ini.WriteString('Athena GM Commands', 'ATHENA_JOBCHANGE', IntToStr(GM_ATHENA_JOBCHANGE));
+        ini.WriteString('Athena GM Commands', 'ATHENA_HIDE', IntToStr(GM_ATHENA_HIDE));
+        ini.WriteString('Athena GM Commands', 'ATHENA_OPTION', IntToStr(GM_ATHENA_OPTION));
+        ini.WriteString('Athena GM Commands', 'ATHENA_STORAGE', IntToStr(GM_ATHENA_STORAGE));
+        ini.WriteString('Athena GM Commands', 'ATHENA_SPEED', IntToStr(GM_ATHENA_SPEED));
+        ini.WriteString('Athena GM Commands', 'ATHENA_WHO3', IntToStr(GM_ATHENA_WHO3));
+        ini.WriteString('Athena GM Commands', 'ATHENA_WHO2', IntToStr(GM_ATHENA_WHO2));
+        ini.WriteString('Athena GM Commands', 'ATHENA_WHO', IntToStr(GM_ATHENA_WHO));
+        ini.WriteString('Athena GM Commands', 'ATHENA_JUMP', IntToStr(GM_ATHENA_JUMP));
+        ini.WriteString('Athena GM Commands', 'ATHENA_JUMPTO', IntToStr(GM_ATHENA_JUMPTO));
+        ini.WriteString('Athena GM Commands', 'ATHENA_WHERE', IntToStr(GM_ATHENA_WHERE));
+        ini.WriteString('Athena GM Commands', 'ATHENA_RURA', IntToStr(GM_ATHENA_RURA));
+        ini.WriteString('Athena GM Commands', 'ATHENA_WARP', IntToStr(GM_ATHENA_WARP));
+        ini.WriteString('Athena GM Commands', 'ATHENA_RURAP', IntToStr(GM_ATHENA_RURAP));
+        ini.WriteString('Athena GM Commands', 'ATHENA_SEND', IntToStr(GM_ATHENA_SEND));
+        ini.WriteString('Athena GM Commands', 'ATHENA_WARPP', IntToStr(GM_ATHENA_WARPP));
+        ini.WriteString('Athena GM Commands', 'ATHENA_CHARWARP', IntToStr(GM_ATHENA_CHARWARP));
 
         ini.Free;
     end;
